<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_nav</name>
  <version>0.0.0</version>
  <description>The turtlebot3_nav package</description>

  <maintainer email="soblin@todo.todo">soblin</maintainer>

  <license>BSD</license>

  <exec_depend>turtlebot3_simulations</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
