<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_multi_nav</name>
  <version>0.0.0</version>
  <description>The turtlebot3_multi_nav package</description>

  <maintainer email="soblin@todo.todo">soblin</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>turtlebot3_simulations</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_teleop</depend>
  <depend>cartographer_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
