<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_path_planner</name>
  <version>0.0.0</version>
  <description>The turtlebot3_path_planner package</description>

  <maintainer email="mamoru@todo.todo">mamoru</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>

  <export>
  </export>
</package>
